Archive2/fd/96d6da8ccdcdc2/output
In file included from /usr/include/c++/4.8/ext/hash_map:60:0,
                 from main.cpp:34:
/usr/include/c++/4.8/backward/backward_warning.h:32:2: warning: #warning This file includes at least one deprecated or antiquated header which may be removed without further notice at a future date. Please use a non-deprecated interface with equivalent functionality instead. For a listing of replacement headers and interfaces, consult the file backward_warning.h. To disable this warning use -Wno-deprecated. [-Wcpp]
 #warning \
  ^
In file included from /usr/include/c++/4.8/locale:41:0,
                 from /usr/include/c++/4.8/iomanip:43,
                 from main.cpp:212:
/usr/include/c++/4.8/bits/locale_facets_nonio.h:1869:5: error: template-id 'do_get<>' for 'String std::messages<char>::do_get(std::messages_base::catalog, int, int, const String&) const' does not match any template declaration
     messages<char>::do_get(catalog, int, int, const string&) const;
     ^
/usr/include/c++/4.8/bits/locale_facets_nonio.h:1869:62: note: saw 1 'template<>', need 2 for specializing a member function template
     messages<char>::do_get(catalog, int, int, const string&) const;
                                                              ^
